# AgentTalk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.windows.yml  docker-compose.yml  pyproject.toml  test-results-2026-05-07.txt
docker/: entrypoint.sh
docs/: overview.md
docs/guides/: agent-skill-usage.md  client-quickstart.md  docker-deployment.md  feishu-bot-setup.md  server-quickstart.md
docs/planning/: feishu-multi-bot-design.md  orchestrator-design.md
docs/plans/: 2026-05-07-agenttalk-design-decisions.md  2026-05-07-agenttalk-feishu-design.md  2026-05-07-agenttalk-feishu-implementation-plan.md  2026-05-07-agenttalk-mvp-implementation-plan.md  2026-05-07-agenttalk-ux-architecture-design.md  assumption-register.md
docs/reference/: cli.md
scripts/: check-env.sh  deploy-hub.sh  quick-register.sh  setup-pane.sh  setup-windows.ps1  start-all-agents.sh  start-client.sh  start-hub-windows.bat  start-hub-windows.ps1  test-all.sh
src/agenttalk/: __init__.py  cli.py  config.py  (+8 more)
tests/: test_cli.py  test_config.py  test_feishu_bot_manager.py  test_feishu_commands.py  test_feishu_render.py  test_feishu_service.py  test_feishu_startup.py  test_feishu_worker.py  test_http_client.py  test_hub_client.py  test_hub_registry.py  test_m4_feedback_context.py  test_messages.py  test_orchestrator.py  test_relay.py  test_store_new_tables.py  test_terminal_ws.py  test_tmux.py  test_tunnel_server.py  test_windows_compat.py
web/: README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts
(+31 files in other folders)
